finish add authen and authorized
