# src/config/swagger.json
@@ -14,13 +14,106 @@
     {
       "name": "Songs",
       "description": "API for Songs Endpoints"
+    },
+    {
+      "name": "Users",
+      "description": "API for users Endpoints"
     }
   ],
   "schemes": ["http"],
   "consumes": ["application/json"],
   "produces": ["application/json"],
   "paths": {
+    "/users/signup": {
+      "post": {
+        "tags": ["Users"],
+        "summary": "API Endpoint for create user",
+        "description": "Create new user in database",
+        "parameters": [
+          {
+            "name": "user",
+            "description": "User parmas to register new user",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#definitions/User"
+            }
+          }
+        ],
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "User created",
+            "schema": {
+              "$ref": "#definitions/SignupRsp"
+            }
+          }
+        }
+      }
+    },
+    "/users/login": {
+      "post": {
+        "tags": ["Users"],
+        "summary": "API Endpoint for login user",
+        "description": "Login user",
+        "parameters": [
+          {
+            "name": "user",
+            "description": "User parmas to login",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#definitions/UserLogin"
+            }
+          }
+        ],
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "User has login",
+            "schema": {
+              "$ref": "#definitions/UserLoginRsp"
+            }
+          }
+        }
+      }
+    },
     "/songs": {
+      "get": {
+        "tags": ["Songs"],
+        "summary": "API Endpoint for find all Song",
+        "description": "Find all song from database",
+        "parameters": [
+          {
+            "name": "page",
+            "type": "integer",
+            "description": "Define the page index for the records",
+            "in": "query"
+          },
+          {
+            "name": "perPage",
+            "type": "integer",
+            "description": "Define the limiet index for the records",
+            "in": "query"
+          },
+          {
+            "name": "authorization",
+            "description": "Access token to authorize the user",
+            "in": "header",
+            "required": "true",
+            "type": "string"
+          }
+        ],
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "all the songs",
+            "schema": {
+              "$ref": "#definitions/Songs"
+            }
+          }
+        }
+      },
       "post": {
         "tags": ["Songs"],
         "summary": "API Endpoint for create Song",
@@ -34,6 +127,13 @@
             "schema": {
               "$ref": "#definitions/Song"
             }
+          },
+          {
+            "name": "authorization",
+            "description": "Access token to authorize the user",
+            "in": "header",
+            "required": "true",
+            "type": "string"
           }
         ],
         "produces": ["application/json"],
@@ -46,9 +146,127 @@
           }
         }
       }
+    },
+    "/songs/{id}": {
+      "parameters": [
+        {
+          "name": "id",
+          "in": "path",
+          "required": "true",
+          "description": "id of the song",
+          "type": "string"
+        },
+        {
+          "name": "authorization",
+          "description": "Access token to authorize the user",
+          "in": "header",
+          "required": "true",
+          "type": "string"
+        }
+      ],
+      "get": {
+        "tags": ["Songs"],
+        "summary": "API Endpoint for find single Song",
+        "description": "Find one song from database",
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "song has found",
+            "schema": {
+              "$ref": "#definitions/Song"
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": ["Songs"],
+        "summary": "API Endpoint for delete the Song",
+        "description": "delete song from database",
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "song has deleted",
+            "schema": {
+              "$ref": "#definitions/Song"
+            }
+          }
+        }
+      },
+      "put": {
+        "tags": ["Songs"],
+        "summary": "API Endpoint for update Song",
+        "description": "updating the exitsing Song in database",
+        "parameters": [
+          {
+            "name": "song",
+            "description": "Song params to updeate the existing song",
+            "in": "body",
+            "schema": {
+              "$ref": "#definitions/UpdateSong"
+            }
+          }
+        ],
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "Song has updated",
+            "schema": {
+              "$ref": "#definitions/Song"
+            }
+          }
+        }
+      }
     }
   },
   "definitions": {
+    "SignupRsp": {
+      "properties": {
+        "success": {
+          "type": "boolean"
+        }
+      }
+    },
+    "User": {
+      "required": ["firstName", "lastName", "email", "password"],
+      "properties": {
+        "_id": {
+          "type": "string"
+        },
+        "firstName": {
+          "type": "string"
+        },
+        "lastName": {
+          "type": "string"
+        },
+        "email": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        },
+        "role": {
+          "type": "integer"
+        }
+      }
+    },
+    "UserLogin": {
+      "required": ["email", "password"],
+      "properties": {
+        "email": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        }
+      }
+    },
+    "UserLoginRsp": {
+      "properties": {
+        "token": {
+          "type": "string"
+        }
+      }
+    },
     "Song": {
       "required": ["title", "url"],
       "properties": {
@@ -64,6 +282,40 @@
         "rating": {
           "type": "integer",
           "format": "Int32"
+        }
+      }
+    },
+    "UpdateSong": {
+      "properties": {
+        "title": {
+          "type": "string"
+        },
+        "url": {
+          "type": "string"
+        },
+        "rating": {
+          "type": "integer",
+          "format": "Int32"
+        }
+      }
+    },
+    "Songs": {
+      "properties": {
+        "docs": {
+          "type": "array",
+          "$ref": "#definitions/Song"
+        },
+        "total": {
+          "type": "integer"
+        },
+        "pages": {
+          "type": "integer"
+        },
+        "limit": {
+          "type": "integer"
+        },
+        "page": {
+          "type": "integer"
         }
       }
     }
